test/types/range/ferguson/range-iteration-invalid-types-counted.good
range-iteration-invalid-types-counted.chpl:3: error: can't apply '#' to a range with idxType int(32) using a count of type int(64)
